@@ -1,3 +1,7 @@
+Mon Jul 13 13:29:23 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* b-group-by.rb: [BUG#125] group-byのexportのnoの設定がおかしかった.
+
 Fri Jul 10 16:06:31 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* b-group-by.rb, bjob.rb, controller.rb: [SR#102] group_byにバグが
